--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,14 @@ header{
     text-align: center;
     color:#ffffff;
 }
+
+/*hero image*/
+img{
+    width:100%;
+    max-width: 600px;
+    margin: 0 auto;
+}
+/*main section quiz section*/
 main{
     display:flex;
     justify-content: center;
@@ -97,6 +105,14 @@ main{
 
 }
 
+/*Will hide all content util javaScript functions allow it*/
 .hide {
     display: none;
+}
+
+/*footer area that will display the score*/
+.score-area{
+    text-align: center;
+        color: #ffffff;
+
 }
